# rust-demo

actix-diesel/: Cargo.toml  README.md  product.db
actix-diesel/migrations/2021-07-24-034124_products/: down.sql  up.sql
actix-diesel/src/: main.rs  models.rs  routes.rs  schema.rs  services.rs
actix-diesel/static/js/: ws.js
actix-simple-blog/: Cargo.toml
actix-simple-blog/posts/my-first-article/: post.md  post_frontmatter.toml
actix-simple-blog/src/: lib.rs  main.rs
actix-simple-blog/src/handlers/: home_handler.rs  post_handler.rs
actix-simple-blog/tailwind/: package.json  pnpm-lock.yaml  tailwind.config.js
actix-simple-blog/templates/: base.html  home.html  post.html
actix/actix-diesel/: .env  Cargo.toml  README.md  product.db
actix/actix-diesel/src/: main.rs  webscoket.rs
actix/actix-diesel/templates/: index.html
async-crawler/: Cargo.toml
async-crawler/src/: main.rs
conslist/: Cargo.toml
conslist/src/: main.rs
crypto-demo/: Cargo.toml  cipher.py  hmac_test.py
design-pattern/state-pattern/src/: main.rs  oop.rs
fs-demo/: Cargo.toml
fs-demo/src/: main.rs
grrs/: Cargo.toml
grrs/src/: lib.rs
grrs/tests/: cli.rs
httpie/: Cargo.toml  README.md  rustfmt.toml
httpie/examples/: cli.rs  cli_get.rs  cli_verify.rs
httpie/src/: main.rs  models.rs  utils.rs
https-proxy/: Cargo.toml
invaders-game/: .gitignore  Cargo.toml
learn_tower/towerlayer/: Cargo.toml
learn_tower/towerlayer/src/: lib.rs
learn_tower/towerservice/: Cargo.toml
learn_tower/towerservice/src/: lib.rs  main.rs
learning-axum/: Cargo.toml
learning-axum/src/: main.rs
learning-rocket/public/: a.txt
learning-rocket/src/: config.rs  handlers.rs  main.rs  tests.rs
libconfig/: Cargo.toml  README.md
libconfig/config/: Poem.toml
libconfig/src/: environment.rs  lib.rs
libconfig/src/conf/: basic_config.rs  error.rs  mod.rs  poem_config.rs
minigrep/src/: lib.rs  main.rs
network/: README.md
network/grpc/: Cargo.toml
network/grpc/src/: foobar.rs  lib.rs
network/https-proxy/src/: main.rs
network/hyper-server/: Cargo.toml  README.md
network/hyper-server/src/: context.rs  handler.rs  main.rs  router.rs
network/simple-im/: README.md
network/simple-im/client/: Cargo.toml
network/webserver/: 404.html
network/webserver/src/: lib.rs
network/webserverplus/: Cargo.toml  README.md
network/webserverplus/asyncstd/: Cargo.toml
network/webserverplus/asynctokio/: Cargo.toml
network/webserverplus/multithreading/: Cargo.toml
network/wschat/: Cargo.toml  README.md
queryer/: README.md  covid.csv
queryer/queryer/examples/: covid.rs
redis-demo/: Cargo.toml
redis-demo/src/: main.rs
rocket-demo/: Rocket.toml
rocket-demo/src/product/: handlers.rs  models.rs  repositories.rs
rocket-jwt/src/: main.rs
rocket-seed/: .gitignore  Cargo.toml  README.md  database.sqlite
rocket-seed/backend/: Cargo.toml
rocket-seed/backend/src/db/: mod.rs  models.rs
rocket-seed/frontend/: Cargo.toml  README.md  index.html
rocket-seed/frontend/src/: lib.rs
rocket-seed/migrations/2021-07-28-012148_task/: down.sql
rocket-seed/migrations/2021-07-28-020317_add_status_to_task/: down.sql
rocket-seed/src/: lib.rs
rocket/learning-rocket/: Cargo.toml  Makefile.toml  Rocket.toml
rocket/learning-rocket/src/: fairings.rs  handlers.rs  main.rs
rocket/rocket-demo/: Cargo.toml  README.md  database.sqlite
rocket/rocket-demo/migrations/2021-07-25-102520_create_products/: up.sql
rocket/rocket-demo/src/: auth.rs  main.rs  schema.rs
rocket/rocket-demo/src/product/: mod.rs
rocket/rocket-hello/: Cargo.toml
rocket/rocket-hello/src/: main.rs  state.rs  user.rs
rocket/rocket-jwt/: Cargo.toml
rocket/rocket-seed/: .env  .gitignore  README.md
rocket/rocket-seed/frontend/: Cargo.toml  Makefile.toml
simple-cli/grrs/: README.md
simple-cli/grrs/src/: main.rs
simple-cli/gussing_game/: Cargo.toml
simple-cli/gussing_game/src/: main.rs
simple-cli/httpie/src/: main.rs  models.rs
simple-cli/minigrep/: README.md
simple-cli/minigrep/src/: lib.rs
simple-cli/sys-info-cmd/: Cargo.toml  README.md
simple-im/: Cargo.toml
simple-im/server/: Cargo.toml
state_pattern/: Cargo.toml
state_pattern/src/: rustify.rs
sys-info-cmd/: beijing
thumbor/: Cargo.toml  README.md  abi.proto  build.rs
thumbor/src/: main.rs
tide-download-upload/src/: main.rs
tide-login/: Cargo.toml
tide-login/src/: main.rs
tide-sqlx/: Cargo.toml  README.md
tide-sqlx/src/: main.rs
tide-sqlx/src/handler/: api.rs
tide/tide-download-upload/: Cargo.toml  README.md
tide/tide-login/: .env  README.md
tide/tide-sqlx/: .env  Cargo.toml  README.md
todomvc/: README.md
todomvc/frontend/: package-lock.json  package.json  rollup.config.js
weather-cli/: Cargo.toml
web_fullstack_tutorial/s1/: README.md
web_fullstack_tutorial/s2/: Cargo.toml  README.md
web_fullstack_tutorial/s3/: Cargo.toml  README.md
web_fullstack_tutorial/s3/webservice/: Cargo.toml
web_fullstack_tutorial/s3/webservice/src/: handlers.rs  models.rs  routes.rs  state.rs
web_fullstack_tutorial/s4/: .env  README.md  database.sql
web_fullstack_tutorial/s5/: .env  Cargo.toml  README.md  database.sql
web_fullstack_tutorial/s5/webapp/: Cargo.toml
web_fullstack_tutorial/s5/webapp/src/: errors.rs  handlers.rs  mod.rs  models.rs  routers.rs
web_fullstack_tutorial/s5/webapp/static/: register.html  teachers.html
web_fullstack_tutorial/s5/webservice/: Cargo.toml
web_fullstack_tutorial/s5/webservice/src/: errors.rs  routes.rs
web_fullstack_tutorial/s5/webservice/src/dbaccess/: course.rs  teacher.rs
web_fullstack_tutorial/s5/webservice/src/handlers/: course.rs  general.rs  teacher.rs
web_fullstack_tutorial/s5/webservice/src/models/: course.rs  teacher.rs
web_fullstack_tutorial/wasm-game-of-life/: Cargo.toml  README.md
webassembly/wasm-game-of-life/: Cargo.toml  README.md
webserver/: Cargo.toml  README.md
webserver/src/: lib.rs  main.rs
workspace/: Cargo.toml  README.md
workspace/add-one/: Cargo.toml
workspace/add-two/: Cargo.toml
workspace/adder/: Cargo.toml
wschat/: chat_client.html
(+63 files in other folders)
