[package]
name = "async-crawler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
# async-std = { version = "1.10.0", features = ["attributes"] }
# surf = "2.3.1"
