[package]
name = "redis-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
# 生产环境一般用 mobc-redis 连接池
redis = { version = "0.21.0", features = ["tokio-comp"] }