[package]
name = "tide-login"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes"] }
# 环境变量
dotenv = "0.15.0"
# date & time
chrono = "0.4.19"
# log
log = "0.4.14"
pretty_env_logger = "0.4.0"
sqlx = { version = "0.5.1", features = ["runtime-async-std-rustls", "macros", "chrono", "json", "postgres", "uuid"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = "0.19.0"
# hash password
rust-argon2 = "0.8.3"
