[package]
name = "tide-sqlx"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
tide = "0.16.0"
sqlx = { version = "0.5.1", features = ["runtime-async-std-rustls", "macros", "chrono", "json", "postgres"] }
tide-sqlx = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
log = "0.4.14"