[package]
name = "weather-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.67"
structopt = "0.3.22"
tokio = { version = "1.10.1", features = ["full"] }
