[package]
name = "usegrpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2"
grpc = "0.8.3"
grpc-protobuf = "0.8.3"
futures = "0.3.17"
tls-api = "0.5.0"

[build-dependencies]
protoc-rust-grpc = "0.8.2"
