[package]
name = "hyper-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.6", default-features = false, features = ["async-await"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
route-recognizer = "0.2.0"
bytes = "1.1.0"
async-trait = "0.1"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'
