[package]
name = "tide-download-upload"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
tide-fluent-routes = "0.1.5"
# 用于管理临时文件和目录
# 不会保存文件 & 支持并发安全
tempfile = "3.2.0"
