[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.0-beta.16"
actix-web = "4.0.0-rc.2"
# http client
awc = "3.0.0-beta.21"
dotenv = "0.15.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
# template
tera = "1.15.0"